// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartnerStatTable Component Render the PartnerStatTable Component having populated props with no errors 1`] = `
<PartnerStatTable
  partner="RSA"
  proposals={
    Array [
      Object {
        "completionComments": Array [
          Object {
            "comment": "Testing",
            "semester": "2018-1",
          },
        ],
        "liaisonAstronomer": Object {
          "familyName": "LA-1",
          "givenName": "LA-1",
        },
        "observations": Array [
          Object {
            "block": Object {
              "length": 2000,
              "priority": 1,
              "semester": "2018-1",
            },
            "status": "ACCEPTED",
          },
        ],
        "principalInvestigator": Object {
          "familyName": "PI-1",
          "givenName": "PI-1",
        },
        "proposalCode": "Code-1",
        "status": "Status-1",
        "statusComment": "Comment-1",
        "timeAllocations": Array [
          Object {
            "amount": 50000,
            "partnerCode": "RSA",
            "priority": 1,
            "semester": "2018-1",
          },
        ],
        "title": "Title-1",
      },
    ]
  }
  semester="2018-1"
  user={
    Object {
      "roles": Array [
        Object {
          "type": "ADMINISTRATOR",
        },
      ],
    }
  }
>
  <div
    className="SATableDiv"
  >
    <h1>
      Partner's Statistics
    </h1>
    <table
      align="center"
      className="SATable"
    >
      <thead>
        <tr>
          <th>
            Proposal Code
          </th>
          <th>
            Proposal Title
          </th>
          <th>
            PI
          </th>
          <th>
            Liaison SA
          </th>
          <th
            style={
              Object {
                "width": "50px",
              }
            }
          >
            Proposal Status
          </th>
          <th>
            Number of blocks
          </th>
          <th>
            Completeness of a Proposal
          </th>
          <th>
            P3 Completion Rate
          </th>
          <th>
            Overall Completion Rate (P0 - P3)
          </th>
          <th>
            Comment
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</PartnerStatTable>
`;

exports[`PartnerStatTable Component Render the PartnerStatTable Component having unpopulated props with no errors 1`] = `
<PartnerStatTable
  partner=""
  proposals={Array []}
  semester=""
  user={Object {}}
>
  <div
    className="SATableDiv"
  >
    <h1>
      Partner's Statistics
    </h1>
    <table
      align="center"
      className="SATable"
    >
      <thead>
        <tr>
          <th>
            Proposal Code
          </th>
          <th>
            Proposal Title
          </th>
          <th>
            PI
          </th>
          <th>
            Liaison SA
          </th>
          <th
            style={
              Object {
                "width": "50px",
              }
            }
          >
            Proposal Status
          </th>
          <th>
            Number of blocks
          </th>
          <th>
            Completeness of a Proposal
          </th>
          <th>
            P3 Completion Rate
          </th>
          <th>
            Overall Completion Rate (P0 - P3)
          </th>
          <th>
            Comment
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</PartnerStatTable>
`;
